Updated .vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,20 +3,13 @@
     "pnpm-lock.yaml": true,
     "node_modules": true,
     "lib": true,
-    "client": false,
-    "public": false,
-    "middleware": false,
-    "utils": false,
-    "routes": false,
-    "views": false,
-    "services": false,
-    ".env": false,
     "server.js": true,
     "client/**/*.d.ts": true,
     "client/**/*js": true,
     "client/**/*js.map": true,
     "server/**/*js": true,
     "server/**/*js.map": true,
+    "server/views/index.hbs": true,
     "server/public/js": true,
     "server-dist": true
   },
