--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "tsconfig-paths-webpack-plugin": "3.3.0",
     "twix": "1.3.0",
     "type-graphql": "1.1.0",
+    "typedi": "0.8.0",
     "typescript": "4.0.5",
     "underscore": "1.11.0",
     "underscore.string": "3.3.5",
