--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react-router-dom": "5.1.6",
     "@types/recharts": "1.8.10",
     "@types/scriptjs": "0.0.2",
+    "@types/simple-oauth2": "4.1.0",
     "@types/string-similarity": "^3.0.0",
     "@types/string-strip-html": "^5.0.0",
     "@types/underscore": "1.10.24",
@@ -101,7 +102,7 @@
     "regenerator-runtime": "0.13.7",
     "sass-loader": "10.0.5",
     "scriptjs": "2.5.9",
-    "simple-oauth2": "2.4.0",
+    "simple-oauth2": "4.1.0",
     "string-format": "2.0.0",
     "string-similarity": "4.0.2",
     "string-strip-html": "6.2.0",
@@ -122,7 +123,6 @@
     "with-default-props": "0.2.1"
   },
   "devDependencies": {
-    "rimraf": "3.0.2",
     "@types/passport-azure-ad": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
@@ -135,6 +135,7 @@
     "mocha": "7.1.2",
     "open": "7.2.1",
     "prettier": "^2.1.1",
+    "rimraf": "3.0.2",
     "ts-node-dev": "1.0.0",
     "webpack-build-notifier": "2.1.0",
     "webpack-livereload-plugin": "2.3.0"
