--- a/.github/workflows/feature-typed-injection_didapp(simpleoauth2).yml
+++ b/.github/workflows/feature-typed-injection_didapp(simpleoauth2).yml
@@ -1,7 +1,6 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - didapp(simpleoauth2)
+name: Build and deploy Node.js app to Azure Web App
 
 on:
   push:
@@ -18,9 +17,9 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
+        node-version: '12.19.0'
 
-    - name: npm install, build, and test
+    - name: npm install, build and package
       run: |
         npm install
         npm run package:client
