Updated slot name for Build and deploy to didapp/dev

--- a/.github/workflows/on_push_dev_deploy.yml
+++ b/.github/workflows/on_push_dev_deploy.yml
@@ -27,6 +27,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'didapp'
-        slot-name: 'simpleoauth2'
+        slot-name: 'dev'
         publish-profile: ${{ secrets.DIDAPP_DEV_PUBLISH_PROFILE }}
         package: .
