--- a/.github/workflows/on_push_dev_deploy.yml
+++ b/.github/workflows/on_push_dev_deploy.yml
@@ -17,6 +17,19 @@ jobs:
       with:
         node-version: '12.18.3'
 
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
+        restore-keys: |
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
+
     - name: npm install, build and package
       run: |
         npm install
