--- a/.github/workflows/on_pull_request_test_build.yml
+++ b/.github/workflows/on_pull_request_test_build.yml
@@ -26,15 +26,11 @@ jobs:
         env:
           cache-name: cache-node-modules
         with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
+          path: node_modules
+          key: node_modules-${{ hashFiles('**/package.json') }}
 
       - name: Install npm packages
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
 
