--- a/.github/workflows/on_push_main_deploy.yml
+++ b/.github/workflows/on_push_main_deploy.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.18.3]
 
     steps:
     - uses: actions/checkout@master
@@ -15,7 +18,7 @@ jobs:
     - name: Select node version 12.8.3
       uses: actions/setup-node@v1
       with:
-        node-version: '12.18.3'
+        node-version: ${{ matrix.node-version }}
 
     - name: npm install, build and package
       run: |
