--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "debug",
       "get-value",
       "passport",
-      "custom-types"
+      "@custom-types"
     ],
     "outDir": "server-dist"
   },
