--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "prettier --config .prettierrc '**/*.ts' --write --loglevel silent",
     "tests": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
     "create-env": "node tasks/create-dot-env.js",
+    "docker:build": "docker build -t olemp/did .",
     "docker:run": "sudo docker --env-file ./docker.env --p 9001:9001 run olemp/did"
   },
   "dependencies": {
