--- a/.github/workflows/feature-docker-publish_didapp-docker-630.yml
+++ b/.github/workflows/feature-docker-publish_didapp-docker-630.yml
@@ -19,7 +19,7 @@ jobs:
         password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
     - run: |
-        docker build . -t ${{ secrets.DOCKER_USERNAME }}did:latest
+        docker build . -t ${{ secrets.DOCKER_USERNAME }}/did:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/did:latest
 
     - name: Deploy to Azure Web App
