--- a/.github/workflows/feature-docker-publish_didapp-docker-630.yml
+++ b/.github/workflows/feature-docker-publish_didapp-docker-630.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
+    - uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - uses: azure/docker-login@v1
       with:
         login-server: https://index.docker.io/v1/
@@ -27,5 +31,4 @@ jobs:
       with:
         app-name: 'didapp-docker-630'
         slot-name: 'production'
-        credentials: ${{ secrets.AZURE_CREDENTIALS }}
         images: '${{ secrets.DOCKER_USERNAME }}/did:latest'
