--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "lint": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts' --write --loglevel silent",
     "tests": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
-    "create-env": "node tasks/create-dot-env.js",
-    "docker:build": "docker build -t olemp/did .",
-    "docker:run": "sudo docker --env-file ./docker.env --p 9001:9001 run olemp/did"
+    "create-env": "node tasks/create-dot-env.js"
   },
   "dependencies": {
     "@apollo/client": "3.2.0",
