--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@babel/preset-env": "7.8.0",
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@pnp/common": "2.0.4",
-    "@types/express-session": "1.17.0",
-    "@types/passport-azure-ad": "4.0.7",
     "@types/debug": "^4.1.5",
     "@types/express": "4.17.8",
+    "@types/express-session": "1.17.0",
     "@types/get-value": "3.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "8.0.3",
     "@types/morgan": "^1.9.2",
     "@types/passport": "^1.0.4",
+    "@types/passport-azure-ad": "4.0.7",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/react-fade-in": "0.1.0",
@@ -63,6 +63,7 @@
     "core-js": "3.6.5",
     "css-loader": "3.5.3",
     "css-modules-typescript-loader": "4.0.1",
+    "dayjs": "1.9.5",
     "debug": "4.2.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
@@ -81,8 +82,6 @@
     "jsonwebtoken": "8.5.1",
     "loglevel": "1.6.7",
     "loglevel-plugin-prefix": "0.8.4",
-    "moment": "2.24.0",
-    "moment-locales-webpack-plugin": "1.2.0",
     "morgan": "1.10.0",
     "node-fetch": "2.6.0",
     "node-sass": "5.0.0",
@@ -91,9 +90,9 @@
     "passport": "0.4.1",
     "passport-azure-ad": "4.2.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
     "react-color": "2.19.3",
     "react-device-detect": "1.14.0",
+    "react-dom": "16.13.1",
     "react-fade-in": "1.1.1",
     "react-hotkeys": "2.0.0",
     "react-i18next": "11.7.3",
@@ -113,7 +112,6 @@
     "ts-loader": "7.0.2",
     "ts-node": "9.0.0",
     "tsconfig-paths-webpack-plugin": "3.3.0",
-    "twix": "1.3.0",
     "type-graphql": "1.1.0",
     "typedi": "0.8.0",
     "typescript": "4.0.5",
