--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "with-default-props": "0.2.1"
   },
   "devDependencies": {
+    "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "assert": "2.0.0",
