Added express-bearer-token to types in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "express",
       "node",
       "mocha",
+      "express-bearer-token",
       "express-session",
       "passport-azure-ad",
       "debug",
