--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,9 +14,10 @@
     "server-dist": true
   },
   "javascript.validate.enable": false,
-  "debug.node.autoAttach": "on",
   "i18n-ally.localesPaths": "./resources",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sourceLanguage": "en-GB",
-  "i18n-ally.displayLanguage": "en-GB"
+  "i18n-ally.displayLanguage": "en-GB",
+  "typescript.tsserver.experimental.enableProjectDiagnostics": true,
+  "editor.folding": true
 }
