--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,6 @@
     "lib": ["es2015", "dom", "es2015.collection"],
     "baseUrl": "./"
   },
-  "include": ["**/*.ts", "**/*.tsx", "i18n/*.json"],
-  "exclude": ["node_modules", "lib"]
+  "include": ["**/*.ts", "**/*.tsx", "i18n/*.json", "**/*.gql"],
+  "exclude": ["node_modules"]
 }
