--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "npm": ">=6.5.0"
   },
   "scripts": {
-    "watch": "concurrently \"webpack\" \"npm run watch:server\" \"node tasks/open.js\" \"node tasks/localtunnel.js\"",
+    "watch": "concurrently \"webpack -c webpack.config.development.js\" \"npm run watch:server\" \"node tasks/open.js\" \"node tasks/localtunnel.js\"",
     "start": "node ./server-dist/index.js",
+    "start:tsnode": "ts-node ./server/index.ts -T -P ./tsconfig.json",
     "watch:server": "nodemon",
-    "package:client": "webpack",
-    "build:server": "tsc --project tsconfig.json && copyfiles -u 1 \"server/public/**/*\" server-dist",
+    "package:client": "webpack -c webpack.config.production.js",
+    "build:server": "tsc --project ./tsconfig.json && copyfiles -u 1 \"server/public/**/*\" server-dist",
     "lint": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts' --write --loglevel silent",
     "tests": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'tests/**/*.ts'",
@@ -110,13 +111,10 @@
     "string-strip-html": "6.2.0",
     "style-loader": "1.2.1",
     "try-require": "1.2.1",
-    "ts-loader": "7.0.2",
     "ts-node": "9.0.0",
-    "tsconfig-paths-webpack-plugin": "3.3.0",
     "twix": "1.3.0",
     "type-graphql": "1.1.0",
     "typedi": "0.8.0",
-    "typescript": "4.0.5",
     "underscore": "1.11.0",
     "underscore.string": "3.3.5",
     "validator": "13.0.0",
@@ -138,9 +136,13 @@
     "open": "7.2.1",
     "prettier": "^2.1.1",
     "rimraf": "3.0.2",
+    "ts-loader": "8.0.10",
     "ts-node-dev": "1.0.0",
+    "typescript": "4.0.5",
     "webpack-build-notifier": "2.1.0",
-    "webpack-livereload-plugin": "2.3.0"
+    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-livereload-plugin": "2.3.0",
+    "webpack-merge": "5.3.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.8.0"
