--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "create-env": "node tasks/create-dot-env.js"
   },
   "dependencies": {
-    "@apollo/client": "3.2.0",
+    "@apollo/client": "3.2.5",
     "@babel/compat-data": "7.8.0",
     "@babel/core": "7.8.6",
     "@babel/preset-env": "7.8.0",
@@ -52,8 +52,8 @@
     "@uifabric/icons": "7.5.15",
     "@uifabric/react-hooks": "7.13.9",
     "apollo-server-express": "2.19.0",
+    "apollo-utilities": "1.3.4",
     "applicationinsights": "1.8.7",
-    
     "array-sort": "1.0.0",
     "azure-storage": "2.10.3",
     "babel-loader": "8.1.0",
@@ -74,7 +74,7 @@
     "express-favicon": "2.0.1",
     "express-session": "1.17.1",
     "get-value": "3.0.1",
-    "graphql": "^15.3.0",
+    "graphql": "15.0.0",
     "graphql-tag": "2.11.0",
     "hbs": "4.1.1",
     "helmet": "3.21.2",
