Updated GA workflows

--- a/.github/workflows/on_pull_request_test_build.yml
+++ b/.github/workflows/on_pull_request_test_build.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           npm run package:client
         env:
+          DEBUG: webpack*
           NODE_ENV: production
 
       - name: Build server
