--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,5 +22,5 @@
     "baseUrl": "./"
   },
   "include": ["**/*.ts", "**/*.tsx", "i18n/*.json", "**/*.gql"],
-  "exclude": ["node_modules"]
+  "exclude": ["../node_modules"]
 }
