--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
     ],
     "outDir": "server-dist"
   },
-  "include": ["server/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["./server/**/*.ts"],
+  "exclude": ["./node_modules"]
 }
