--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,7 @@
     "skipLibCheck": true,
     "inlineSources": false,
     "strictNullChecks": false,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
     "typeRoots": ["../node_modules/@types"],
     "baseUrl": "./"
