--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=6.5.0"
   },
   "scripts": {
-    "watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"node @tasks/open.js\" \"node @tasks/localtunnel.js\"",
+    "watch": "concurrently \"npm run watch:client\" \"npm run watch:server\" \"node .tasks/open.js\" \"node .tasks/localtunnel.js\"",
     "start": "node ./server-dist/index.js",
     "watch:server": "nodemon",
     "watch:client": "webpack",
@@ -15,8 +15,8 @@
     "build:server": "tsc --project tsconfig.json && copyfiles -u 1 \"server/public/**/*\" server-dist",
     "lint": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts' --write --loglevel silent",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register '@tests/**/*.ts'",
-    "create-env": "node @tasks/create-dot-env.js"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register '.tests/**/*.ts'",
+    "create-env": "node .tasks/create-dot-env.js"
   },
   "dependencies": {
     "@apollo/client": "3.2.0",
