--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
     "server-dist": true
   },
   "javascript.validate.enable": false,
-  "i18n-ally.localesPaths": "./.resources",
+  "i18n-ally.localesPaths": "./client/i18n",
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sourceLanguage": "en-GB",
   "i18n-ally.displayLanguage": "en-GB",
