Added lint to pull request build action

--- a/.github/workflows/on_pull_request_test_build.yml
+++ b/.github/workflows/on_pull_request_test_build.yml
@@ -34,6 +34,10 @@ jobs:
         run: |
           npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
 
+      - name: Lint
+        run: |
+          npm run lint
+
       - name: Package client JS
         run: |
           npm run package:client
