--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "watch:client": "webpack",
     "package:client": "webpack",
     "build:server": "tsc --project tsconfig.json && copyfiles -u 1 \"server/public/**/*\" server-dist",
-    "lint": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
+    "lint": "eslint --ext .ts,.tsx ./client ./server --color && npm run prettier",
+    "lint:fix": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts*' --write --loglevel silent",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register '.tests/**/*.ts'",
     "create-env": "node .tasks/create-dot-env.js"
