--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,9 @@
     "resolveJsonModule": true,
     "pretty": true,
     "typeRoots": ["../node_modules/@types"],
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "paths": {
+      "AppConfig": ["./App.config.json"]
+    }
   }
 }
