Updated ProjectForm validation

--- a/.vscode/i18n-ally-reviews.yml
+++ b/.vscode/i18n-ally-reviews.yml
@@ -53,5 +53,6 @@ reviews:
             suggestion: ''
             type: comment
             time: '2020-09-29T14:58:16.336Z'
+            resolved: true
   customers.createNewText:
     description: Create new text for Customers
