--- a/.github/workflows/on_pull_request_test_build.yml
+++ b/.github/workflows/on_pull_request_test_build.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - dev
+    paths:
+      - client/**
+      - server/**
 jobs:
   build:
     runs-on: ubuntu-latest
