BrowserStorage util class now has merge()

--- a/client/App.config.json
+++ b/client/App.config.json
@@ -5,5 +5,7 @@
   "PROJECT_NAME_MIN_LENGTH": 2,
   "CUSTOMER_KEY_MIN_LENGTH": 3,
   "CUSTOMER_KEY_MAX_LENGTH": 12,
-  "CUSTOMER_NAME_MIN_LENGTH": 2
+  "CUSTOMER_NAME_MIN_LENGTH": 2,
+  "BROWSER_STORAGE_KEY_PREFIX": "did",
+  "BROWSER_STORAGE_DEFAULT_EXPIRE": "2month"
 }
