--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "7.8.0",
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@pnp/common": "2.0.4",
+    "@reduxjs/toolkit": "1.5.0",
     "@types/debug": "^4.1.5",
     "@types/express": "4.17.8",
     "@types/express-session": "1.17.0",
