Added app config DEFAULT_USER_LANGUAGE

--- a/client/App.config.json
+++ b/client/App.config.json
@@ -7,5 +7,6 @@
   "CUSTOMER_KEY_MAX_LENGTH": 12,
   "CUSTOMER_NAME_MIN_LENGTH": 2,
   "BROWSER_STORAGE_KEY_PREFIX": "did",
-  "BROWSER_STORAGE_DEFAULT_EXPIRE": "2month"
+  "BROWSER_STORAGE_DEFAULT_EXPIRE": "2month",
+  "DEFAULT_USER_LANGUAGE": "en-GB"
 }
