--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "watch:client": "webpack",
     "package:client": "webpack",
     "build:server": "tsc --project tsconfig.json && copyfiles -u 1 \"server/public/**/*\" server-dist",
+    "debug:server": "npm run-script build:server; npx ts-node ./server/index.ts -T --inspect --wait",
     "lint": "eslint --ext .ts,.tsx ./client ./server --color && npm run prettier",
     "lint:fix": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts*' --write --loglevel silent",
