--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "class-validator": "0.12.2",
     "compression-webpack-plugin": "6.0.5",
     "concurrently": "5.3.0",
-    "connect-azuretables": "1.0.20",
+    "connect-redis": "5.0.0",
     "copyfiles": "2.4.0",
     "core-js": "3.6.5",
     "css-loader": "3.5.3",
@@ -105,6 +105,7 @@
     "react-markdown": "5.0.2",
     "react-router-dom": "5.2.0",
     "recharts": "1.8.5",
+    "redis": "3.0.2",
     "reflect-metadata": "0.1.13",
     "regenerator-runtime": "0.13.7",
     "sass-loader": "10.0.5",
