Updated .env sample and set redis cache client properties

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,5 @@ PORT=9001
 NODE_ENV=development
 OAUTH_SIGNIN_PROMPT=select_account
 SESSION_NAME=did.localhost
+REDIS_CACHE_HOSTNAME=cache.redis.cache.windows.net
+REDIS_CACHE_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
