--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
   },
   "devDependencies": {
     "@types/randomcolor": "^0.5.5",
+    "@types/redis": "^2.8.28",
     "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
