--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,13 @@ SESSION_NAME=did.localhost
 SESSION_SIGNING_KEY=##Insert Key##
 REDIS_CACHE_HOSTNAME=cache.redis.cache.windows.net
 REDIS_CACHE_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+APOLLO_KEY=##Insert Apollo key##
+APOLLO_GRAPH_VARIANT=current
+APOLLO_SCHEMA_REPORTING=true
+NO_BROWSER=0
+OPEN_DELAY=10
+CLIENT_LOG_LEVEL=TRACE
+API_TOKEN_SECRET=
+WEBPACK_NOTIFICATIONS_SUPPRESSSUCCESS=true
+WEBPACK_NOTIFICATIONS_SHOWDURATION=true
+WEBPACK_NOTIFICATIONS_SOUND=growl
