--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@pnp/common": "2.0.4",
     "@reduxjs/toolkit": "1.5.0",
     "@types/debug": "^4.1.5",
+    "@types/connect-redis": "0.0.16",
     "@types/express": "4.17.8",
     "@types/express-session": "1.17.0",
+    "@types/randomcolor": "^0.5.5",
+    "@types/redis": "2.8.28",
+    "@types/set-value": "^2.0.0",
     "@types/get-value": "3.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "8.0.3",
@@ -128,10 +132,6 @@
     "with-default-props": "0.2.1"
   },
   "devDependencies": {
-    "@types/connect-redis": "0.0.16",
-    "@types/randomcolor": "^0.5.5",
-    "@types/redis": "^2.8.28",
-    "@types/set-value": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
     "assert": "2.0.0",
