--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@pnp/common": "2.0.4",
     "@reduxjs/toolkit": "1.5.0",
-    "@types/debug": "^4.1.5",
+    "@types/debug": "4.1.5",
     "@types/connect-redis": "0.0.16",
     "@types/express": "4.17.8",
-    "@types/express-session": "1.15.16",
-    "@types/randomcolor": "^0.5.5",
+    "@types/express-session": "1.17.0",
+    "@types/randomcolor": "0.5.5",
     "@types/redis": "2.8.28",
-    "@types/set-value": "^2.0.0",
+    "@types/set-value": "2.0.0",
     "@types/get-value": "3.0.1",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jsonwebtoken": "8.5.0",
     "@types/mocha": "8.0.3",
-    "@types/morgan": "^1.9.2",
-    "@types/passport": "^1.0.4",
+    "@types/morgan": "1.9.2",
+    "@types/passport": "1.0.6",
     "@types/passport-azure-ad": "4.0.7",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
@@ -48,8 +48,8 @@
     "@types/recharts": "1.8.10",
     "@types/scriptjs": "0.0.2",
     "@types/simple-oauth2": "4.1.0",
-    "@types/string-similarity": "^3.0.0",
-    "@types/string-strip-html": "^5.0.0",
+    "@types/string-similarity": "4.0.0",
+    "@types/string-strip-html": "5.0.0",
     "@types/underscore": "1.10.24",
     "@types/underscore.string": "0.0.38",
     "@types/validator": "13.0.0",
@@ -77,7 +77,7 @@
     "express": "4.17.1",
     "express-bearer-token": "2.4.0",
     "express-favicon": "2.0.1",
-    "express-session": "1.17.1",
+    "express-session": "1.17.0",
     "get-value": "3.0.1",
     "graphql": "15.3.0",
     "graphql-tag": "2.11.0",
@@ -97,7 +97,7 @@
     "office-ui-fabric-react": "7.106.3",
     "passport": "0.4.1",
     "passport-azure-ad": "4.2.1",
-    "randomcolor": "^0.6.2",
+    "randomcolor": "0.6.2",
     "react": "16.13.1",
     "react-color": "2.19.3",
     "react-copy-to-clipboard": "5.0.2",
@@ -115,7 +115,7 @@
     "sass-loader": "10.0.5",
     "simple-oauth2": "4.1.0",
     "string-format": "2.0.0",
-    "string-similarity": "4.0.2",
+    "string-similarity": "4.0.4",
     "string-strip-html": "6.2.0",
     "style-loader": "1.2.1",
     "try-require": "1.2.1",
@@ -136,13 +136,13 @@
     "@typescript-eslint/parser": "4.6.1",
     "assert": "2.0.0",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "7.21.5",
-    "localtunnel": "2.0.0",
+    "eslint-config-prettier": "7.2.0",
+    "eslint-plugin-prettier": "3.3.1",
+    "eslint-plugin-react": "7.22.0",
+    "localtunnel": "2.0.1",
     "mocha": "7.1.2",
     "open": "7.2.1",
-    "prettier": "^2.1.1",
+    "prettier": "2.2.1",
     "webpack-build-notifier": "2.1.0",
     "webpack-bundle-analyzer": "4.1.0",
     "webpack-livereload-plugin": "2.3.0"
