npm run-script => npm run in package.json to be consistent

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "watch:client": "webpack",
     "package:client": "webpack",
     "build:server": "tsc --project tsconfig.json && copyfiles -u 1 \"server/public/**/*\" dist/server",
-    "debug:server": "npm run-script build:server; npx ts-node ./server/index.ts -T --inspect --wait",
+    "debug:server": "npm run build:server; npx ts-node ./server/index.ts -T --inspect --wait",
     "lint": "eslint --ext .ts,.tsx ./client ./server --color && npm run prettier",
     "lint:fix": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts*' --write --loglevel silent",
@@ -99,7 +99,7 @@
     "randomcolor": "0.6.2",
     "react": "16.13.1",
     "react-color": "2.19.3",
-    "react-copy-to-clipboard": "5.0.2",
+    "react-copy-to-clipboard": "5.0.3",
     "react-device-detect": "1.14.0",
     "react-dom": "16.13.1",
     "react-fade-in": "1.1.1",
