--- a/.env.sample
+++ b/.env.sample
@@ -20,3 +20,4 @@ API_TOKEN_SECRET=
 WEBPACK_NOTIFICATIONS_SUPPRESSSUCCESS=true
 WEBPACK_NOTIFICATIONS_SHOWDURATION=true
 WEBPACK_NOTIFICATIONS_SOUND=growl
+MONGO_DB_CONNECTION_STRING=
