--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
     "@types/debug": "4.1.5",
     "@types/express": "4.17.8",
     "@types/express-session": "1.17.0",
-    "@types/randomcolor": "0.5.5",
-    "@types/redis": "2.8.28",
-    "@types/set-value": "2.0.0",
     "@types/get-value": "3.0.1",
     "@types/jsonwebtoken": "8.5.0",
     "@types/mocha": "8.0.3",
     "@types/morgan": "1.9.2",
     "@types/passport": "1.0.6",
     "@types/passport-azure-ad": "4.0.7",
+    "@types/randomcolor": "0.5.5",
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
     "@types/react-fade-in": "0.1.0",
     "@types/react-router-dom": "5.1.6",
     "@types/recharts": "1.8.10",
+    "@types/redis": "2.8.28",
     "@types/scriptjs": "0.0.2",
+    "@types/set-value": "2.0.0",
     "@types/simple-oauth2": "4.1.0",
     "@types/string-similarity": "4.0.0",
     "@types/string-strip-html": "5.0.0",
@@ -89,6 +89,7 @@
     "jsonwebtoken": "8.5.1",
     "loglevel": "1.6.7",
     "loglevel-plugin-prefix": "0.8.4",
+    "mongodb": "3.6.4",
     "morgan": "1.10.0",
     "node-fetch": "2.6.0",
     "node-sass": "5.0.0",
