--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/get-value": "3.0.1",
     "@types/jsonwebtoken": "8.5.0",
     "@types/mocha": "8.0.3",
+    "@types/mongodb": "3.6.7",
     "@types/morgan": "1.9.2",
     "@types/passport": "1.0.6",
     "@types/passport-azure-ad": "4.0.7",
