--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@pnp/common": "2.0.4",
     "@reduxjs/toolkit": "1.5.0",
+    "@types/co": "4.6.2",
     "@types/debug": "4.1.5",
     "@types/express": "4.17.8",
     "@types/express-session": "1.17.0",
@@ -64,6 +65,7 @@
     "body-parser": "1.19.0",
     "chalk": "4.0.0",
     "class-validator": "0.12.2",
+    "co": "4.6.0",
     "compression-webpack-plugin": "6.0.5",
     "concurrently": "5.3.0",
     "connect-redis": "5.0.0",
