--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/webpack-env": "1.15.3",
     "@uifabric/icons": "7.5.15",
     "@uifabric/react-hooks": "7.13.9",
+    "apollo-datasource-mongodb": "0.3.0",
     "apollo-server-express": "2.19.0",
     "applicationinsights": "1.8.7",
     "array-sort": "1.0.0",
