--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lint": "eslint --ext .ts,.tsx ./client ./server --color && npm run prettier",
     "lint:fix": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts*' --write --loglevel silent",
-    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register '.tests/**/*.ts'",
     "create-env": "node .tasks/create-dot-env.js"
   },
   "dependencies": {
@@ -79,6 +78,7 @@
     "express-bearer-token": "2.4.0",
     "express-favicon": "2.0.1",
     "express-session": "1.17.0",
+    "fast-copy": "2.1.1",
     "get-value": "3.0.1",
     "graphql": "15.3.0",
     "graphql-tag": "2.11.0",
