--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/express": "4.17.8",
     "@types/express-session": "1.17.0",
     "@types/get-value": "3.0.1",
+    "@types/graphql-iso-date": "3.4.0",
     "@types/jsonwebtoken": "8.5.0",
     "@types/mocha": "8.0.3",
     "@types/mongodb": "3.6.7",
@@ -81,6 +82,7 @@
     "fast-copy": "2.1.1",
     "get-value": "3.0.1",
     "graphql": "15.3.0",
+    "graphql-iso-date": "3.6.1",
     "graphql-tag": "2.11.0",
     "hbs": "4.1.1",
     "helmet": "3.21.2",
