Using app-module-path

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@uifabric/react-hooks": "7.13.9",
     "apollo-datasource-mongodb": "0.3.0",
     "apollo-server-express": "2.19.0",
+    "app-module-path": "2.2.0",
     "applicationinsights": "1.8.7",
     "array-sort": "1.0.0",
     "azure-storage": "2.10.3",
