--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "css-modules-typescript-loader": "4.0.1",
     "dayjs": "1.9.5",
     "debug": "4.2.0",
-    "deepmerge": "4.2.2",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-bearer-token": "2.4.0",
@@ -117,6 +116,7 @@
     "reflect-metadata": "0.1.13",
     "regenerator-runtime": "0.13.7",
     "sass-loader": "10.0.5",
+    "set-value": "3.0.2",
     "simple-oauth2": "4.1.0",
     "string-format": "2.0.0",
     "string-similarity": "4.0.4",
