--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "eslint-config-prettier": "7.2.0",
     "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "localtunnel": "2.0.1",
     "open": "7.2.1",
     "prettier": "2.2.1",
