Need to disable react-hooks/exhaustive-deps in some components

--- a/client/App.config.json
+++ b/client/App.config.json
@@ -8,5 +8,7 @@
   "CUSTOMER_NAME_MIN_LENGTH": 2,
   "BROWSER_STORAGE_KEY_PREFIX": "did",
   "BROWSER_STORAGE_DEFAULT_EXPIRE": "2month",
-  "DEFAULT_USER_LANGUAGE": "en-GB"
+  "DEFAULT_USER_LANGUAGE": "en-GB",
+  "TIMESHEET_OVERVIEW_DAY_FORMAT": "dddd DD",
+  "TIMESHEET_OVERVIEW_TIME_FORMAT": "HH:mm"
 }
