--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint --ext .ts,.tsx ./client ./server --color && npm run prettier",
     "lint:fix": "eslint --ext .ts,.tsx ./client ./server --color --fix && npm run prettier",
     "prettier": "prettier --config .prettierrc '**/*.ts*' --write --loglevel silent",
-    "create-env": "node .tasks/create-dot-env.js"
+    "create-env": "node .tasks/create-dot-env.js",
+    "typedoc:server": "typedoc ./server/**/*.ts --out ./server-docs --readme none"
   },
   "dependencies": {
     "@apollo/client": "3.2.0",
@@ -149,6 +150,8 @@
     "localtunnel": "2.0.1",
     "open": "7.2.1",
     "prettier": "2.2.1",
+    "typedoc": "^0.20.28",
+    "typedoc-plugin-markdown": "^3.5.0",
     "webpack-build-notifier": "2.1.0",
     "webpack-bundle-analyzer": "4.1.0",
     "webpack-livereload-plugin": "2.3.0"
