--- a/.github/workflows/on_pr_test_build.yml
+++ b/.github/workflows/on_pr_test_build.yml
@@ -35,9 +35,9 @@ jobs:
         run: |
           npm install --no-progress --loglevel silent --no-shrinkwrap --no-fund
 
-      - name: Lint
+      - name: XO
         run: |
-          npm run lint
+          npm run xo
 
       - name: Package client JS
         run: |
