--- a/package.json
+++ b/package.json
@@ -226,7 +226,11 @@
   
       "tsdoc/syntax": "warn",
 
-      "unicorn/filename-case": 0
+      "unicorn/filename-case": 0,
+
+      "unicorn/no-array-reduce": 0,
+
+      "unicorn/no-null": 0
     },
     "settings": {
       "react": {
