Updated .env.sample to include DEBUG=environment*
This way the server logs missing env variables.

--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,4 @@ WEBPACK_NOTIFICATIONS_SHOWDURATION=true
 WEBPACK_NOTIFICATIONS_SOUND=growl
 MONGO_DB_CONNECTION_STRING=
 MONGO_DB_DB_NAME=test
+DEBUG=environment*
