fix: added description to package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "did",
+  "description": "The calendar is your Timesheet",
   "version": "0.9.9",
   "private": true,
- 
   "contributors": [
     {
       "name": "Carl Joakim Damsleth",
