chore: readme blueprint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     "server/.docs": true,
     "client/.docs": true,
     ".localtunnel": true,
-    "package-lock*": true
+    "package-lock*": true,
+    "README.md": true
   },
   "typescript.autoClosingTags": false,
   "javascript.validate.enable": false,
