--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "office-ui-fabric-react": "7.106.3",
     "passport": "0.4.1",
     "passport-azure-ad": "4.2.1",
-    "passport-google-oauth": "2.0.0",
+    "passport-google-oauth20": "2.0.0",
     "randomcolor": "0.6.2",
     "react": "16.13.1",
     "react-color": "2.19.3",
@@ -156,7 +156,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "12.0.1",
-    "@types/passport-google-oauth": "^1.0.41",
+    "@types/passport-google-oauth20": "^2.0.7",
     "@types/string-format": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "4.6.1",
     "@typescript-eslint/parser": "4.6.1",
