--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,7 @@
     "typeRoots": ["../node_modules/@types"],
     "baseUrl": "./",
     "paths": {
-      "AppConfig": ["./App.config.json"],
+      "package": ["../package.json"],
       "DateUtils": ["../shared/utils/date"]
     }
   }
