--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "description": "The calendar is your Timesheet",
   "version": "0.9.9",
   "private": true,
+  "config": {
+    "app": {
+      "PROJECT_KEY_MIN_LENGTH": 2,
+      "PROJECT_KEY_MAX_LENGTH": 12,
+      "PROJECT_NAME_MIN_LENGTH": 2,
+      "CUSTOMER_KEY_MIN_LENGTH": 3,
+      "CUSTOMER_KEY_MAX_LENGTH": 12,
+      "CUSTOMER_NAME_MIN_LENGTH": 2,
+      "BROWSER_STORAGE_KEY_PREFIX": "did",
+      "BROWSER_STORAGE_DEFAULT_EXPIRE": "2month",
+      "DEFAULT_USER_LANGUAGE": "en-GB",
+      "TIMESHEET_OVERVIEW_DAY_FORMAT": "dddd DD",
+      "TIMESHEET_OVERVIEW_TIME_FORMAT": "HH:mm"
+    }
+  },
   "contributors": [
     {
       "name": "Carl Joakim Damsleth",
