--- a/.env.sample
+++ b/.env.sample
@@ -1,14 +1,14 @@
-OAUTH_APP_ID=##Insert GUID##
-OAUTH_APP_PASSWORD=##Insert Password##
-OAUTH_REDIRECT_URI=http://localhost:9001/auth/callback
-OAUTH_SCOPES=profile offline_access user.read user.read.all calendars.read mailboxsettings.readwrite
+MICROSOFT_CLIENT_ID=##Insert GUID##
+MICROSOFT_CLIENT_SECRET=##Insert Password##
+MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/callback
+MICROSOFT_SCOPES=profile offline_access user.read user.read.all calendars.read mailboxsettings.readwrite
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:9001/auth/google/callback
 GOOGLE_TEMP_SUBSCRIPTION_ID=dcb89c10-67b8-48cc-8819-85de37e8af91
 PORT=9001
 NODE_ENV=development
-OAUTH_SIGNIN_PROMPT=select_account
+MICROSOFT_SIGNIN_PROMPT=select_account
 SESSION_NAME=did.localhost
 SESSION_SIGNING_KEY=##Insert Key##
 REDIS_CACHE_HOSTNAME=cache.redis.cache.windows.net
