--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,11 @@
 MICROSOFT_CLIENT_ID=##Insert GUID##
 MICROSOFT_CLIENT_SECRET=##Insert Password##
-MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/callback
+MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/ad/callback
 MICROSOFT_SCOPES=profile offline_access user.read user.read.all calendars.read mailboxsettings.readwrite
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:9001/auth/google/callback
-GOOGLE_TEMP_SUBSCRIPTION_ID=dcb89c10-67b8-48cc-8819-85de37e8af91
+GOOGLE_SCOPES=https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/calendar.readonly
 PORT=9001
 NODE_ENV=development
 MICROSOFT_SIGNIN_PROMPT=select_account
