chore: auth providers

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+AUTH_PROVIDERS=ad
 MICROSOFT_CLIENT_ID=##Insert GUID##
 MICROSOFT_CLIENT_SECRET=##Insert Password##
 MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/ad/callback
