--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-AUTH_PROVIDERS=ad
+AUTH_PROVIDERS=azuread-openidconnect
 MICROSOFT_CLIENT_ID=##Insert GUID##
 MICROSOFT_CLIENT_SECRET=##Insert Password##
-MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/ad/callback
+MICROSOFT_REDIRECT_URI=http://localhost:9001/auth/azuread-openidconnect/callback
 MICROSOFT_SCOPES=profile offline_access user.read user.read.all calendars.read mailboxsettings.readwrite
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
