--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
     "babel-loader": "8.1.0",
     "body-parser": "1.19.0",
     "class-validator": "0.12.2",
-    "compression-webpack-plugin": "6.0.5",
     "concurrently": "5.3.0",
     "connect-redis": "5.0.0",
     "copyfiles": "2.4.0",
@@ -117,6 +116,7 @@
     "string-similarity": "4.0.4",
     "string-strip-html": "6.2.0",
     "style-loader": "1.2.1",
+    "terser-webpack-plugin": "4.2.3",
     "try-require": "1.2.1",
     "ts-loader": "7.0.2",
     "ts-node": "9.0.0",
