--- a/.env.sample
+++ b/.env.sample
@@ -28,3 +28,5 @@ MONGO_DB_CONNECTION_STRING=
 MONGO_DB_DB_NAME=test
 DEBUG=environment*
 LOCALTUNNEL_SUBDOMAIN=
+GITHUB_TOKEN=
+GITHUB_FEEDBACK_REPO=did-feedback-test
