--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/core": "7.8.6",
     "@babel/preset-env": "7.8.0",
     "@microsoft/microsoft-graph-client": "2.0.0",
+    "@octokit/auth-app": "^3.2.0",
+    "@octokit/request": "5.4.14",
     "@pnp/common": "2.0.4",
     "@primer/css": "^15.2.0",
     "@reduxjs/toolkit": "1.5.0",
