rename: onupdateusersettings => onupdateuser

--- a/package.json
+++ b/package.json
@@ -319,7 +319,8 @@
           "github",
           "readme",
           "experimental",
-          "typo"
+          "typo",
+          "rename"
         ]
       ]
     }
