--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@babel/compat-data": "7.8.0",
     "@babel/core": "7.8.6",
     "@babel/preset-env": "7.8.0",
-    "@fluentui/react": "^8.6.1",
-    "@fluentui/react-theme-provider": "^0.18.5",
+    "@fluentui/react": "8.6.1",
     "@microsoft/microsoft-graph-client": "2.0.0",
     "@octokit/auth-app": "3.3.0",
     "@octokit/request": "5.4.14",
@@ -320,7 +319,8 @@
           "experimental",
           "typo",
           "rename",
-          "merge"
+          "merge",
+          "migrate"
         ]
       ]
     }
